Migrated user resource